# uc-minimal

./: .gitignore  .gitmodules  README.md
atmega328p-c/: CMakeLists.txt  toolchain.cmake
atmega328p-c/src/: main.c
esp8266-c-freertos/: Makefile
esp8266-c-freertos/main/: app_main.c
esp8266-rtos-sdk/: Makefile
esp8266-rtos-sdk/main/: app_main.c
stm32-asm/: CMakeLists.txt  arm-none-eabi.cmake  linker.ld
stm32-asm/src/: main.s
stm32-c/: CMakeLists.txt  linker.ld
stm32-c-freertos/: CMakeLists.txt
stm32-c-freertos-hal/: CMakeLists.txt
stm32-c-freertos-hal/src/: main.c  timebase.c
stm32-c-freertos/inc/: FreeRTOSConfig.h
stm32-c-freertos/src/: main.c
stm32-c-zephyr/app/: CMakeLists.txt  prj.conf
stm32-c-zephyr/app/src/: main.c
stm32-c/src/: main.c
stm32-cpp/: CMakeLists.txt
stm32-cpp/src/: main.cpp
stm32-hal-rtos-minimal/: CMakeLists.txt
stm32-hal-rtos-minimal/app/inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h
stm32-hal-rtos-minimal/app/src/: main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
stm32-hal-rtos-minimal/code/inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
stm32-hal-rtos-minimal/code/src/: main.c  stm32f4xx_it.c
stm32-minimal/: CMakeLists.txt
stm32-minimal-cpp/: CMakeLists.txt
stm32-minimal-cpp/app/src/: main.cpp
stm32-minimal/app/src/: main.c
stm32-minimal/code/src/: main.c
stm32-minimal/startup/: startup_stm32f411xe.s
stm32-rtos-minimal/: CMakeLists.txt
stm32-rtos-minimal/app/src/: main.c
stm32-rtos-minimal/code/inc/: FreeRTOSConfig.h
stm32-rtos-minimal/code/src/: main.c
stm32-rust-hal/: Cargo.toml  memory.x
stm32-rust-hal/.cargo/: config
stm32-rust-hal/src/: main.rs
stm32-zephyr/: CMakeLists.txt  prj.conf
stm32-zephyr/boards/arm/example_board/: Kconfig.board  Kconfig.defconfig  board.cmake  example_board.dts  example_board_defconfig
stm32-zephyr/src/: main.c
